--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,14 +1,8 @@
-spring.application.name=moviedb
-# Use an in-memory H2 database
-spring.datasource.url=jdbc:h2:file:~/moviedb
+spring.datasource.url=jdbc:h2:mem:moviedb
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
-
-# JPA settings
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
-spring.jpa.hibernate.ddl-auto=update
-
-# Enable H2 Console
 spring.h2.console.enabled=true
 spring.h2.console.path=/h2-console
+spring.datasource.hikari.maximum-pool-size=5
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
